--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,9 @@ body {
   #remove-outline:focus {
     outline: none;
   }
+  #prod1, #prod2, #prod3, #prod4, #prod5, #prod6, #prod7, #prod8, #prod9 {
+    cursor: pointer;
+  }
 
   /* responsive */
   @media screen and (max-width: 570px) {
